--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "sharp": "^0.31.3",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
