--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^0.2.0",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
+    "next-auth": "^4.22.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
