--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@faker-js/faker": "^8.0.2",
     "@hookform/resolvers": "^3.1.1",
     "@iarna/toml": "^2.2.5",
+    "@nivo/bar": "^0.83.0",
+    "@nivo/core": "^0.83.0",
+    "@nivo/line": "^0.83.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -53,10 +56,12 @@
     "next": "^13.4.8",
     "next-auth": "^4.22.4",
     "next-themes": "^0.2.1",
+    "plotly.js": "^2.26.2",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-plotly.js": "^2.6.0",
     "sharp": "^0.31.3",
     "swr": "^2.2.0",
     "tailwind-merge": "^1.13.2",
@@ -66,8 +71,10 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/node": "^17.0.45",
+    "@types/plotly.js": "^2.12.27",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-plotly.js": "^2.6.1",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
